# nyx-ci-test

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: verify.yml
crates/agent-dev/: Cargo.toml
crates/agent-dev/src/: lib.rs  main.rs
crates/bof-runner/: Cargo.toml  build.rs
crates/bof-runner/src/: beacon_api.c  bof_print.c  lib.rs  shim.rs  win.rs
crates/client-ui-web/: index.html  package-lock.json  package.json  vite.config.ts
crates/client-ui-web/src/: main.tsx
crates/client-ui-web/src-tauri/: Cargo.toml  tauri.conf.json
crates/client-ui-web/src-tauri/capabilities/: default.json
crates/client-ui-web/src-tauri/src/: commands.rs  lib.rs  main.rs  poll.rs  rest.rs  state.rs
crates/client-ui-web/src/app/: App.css  App.tsx  ConnectPage.css  ConnectPage.tsx  CredsPage.css  CredsPage.tsx  EventsPage.css  EventsPage.tsx  ImplantPage.css  ImplantPage.tsx  TopologyPage.css  TopologyPage.tsx  Workspace.css  Workspace.tsx
crates/client-ui-web/src/components/: CommandConsole.css  CommandConsole.tsx  CommandInput.css  CommandInput.tsx  Dock.css  Dock.tsx  (+10 more)
crates/coff/: Cargo.toml
crates/coff/src/: lib.rs
crates/coff/tests/: coff.rs
crates/config/: Cargo.toml
crates/config-macros/: Cargo.toml
crates/config-macros/src/: lib.rs
crates/config/src/: lib.rs
crates/config/tests/: embed.rs
crates/config/tests/fixtures/: sample.cfg
crates/evasion/: Cargo.toml
crates/evasion/src/: lib.rs  stub.rs  syscalls.rs
crates/evasion/tests/: ssn.rs
crates/implant-evasionsdk/: Cargo.toml
crates/implant-evasionsdk/src/: apc.rs  foliage.rs  frame.rs  gap.rs  lib.rs  offsets_table.rs  rc4.rs  swap.rs
crates/implant-win/: Cargo.toml  README.md  build.rs  config.local.toml  config.toml
crates/implant-win/.cargo/: config.toml
crates/implant-win/src/: antidebug.rs  beacon.rs  blind.rs  blind_hwbp.rs  bof.rs  caller_spoof.rs  cell.rs  cfg_user.rs  config.rs  config_placeholder.rs  context.rs  dllmain.rs  entry.rs  env_keying.rs  envelopes.rs  envprobe.rs  evasion_glue.rs  fluctuation.rs  fluctuation_thunk.rs  fmt.rs  fs.rs  hashdump.rs  heap.rs  hookchain.rs  hostinfo.rs  inject.rs  insomniac.rs  keylog.rs  kits.rs  lacuna.rs  lacuna_stomp.rs  lib.rs  mem.rs  ntalloc.rs  pivot.rs  postex.rs  proxy_veh.rs  recon.rs  resolve.rs  screenshot.rs  (+9 more)
crates/implant-win/src/channels/: dns.rs  doh.rs  extc2.rs  https.rs  mod.rs  smb.rs  tcp.rs
crates/implant-win/src/trex/: cleanup.rs  delivery.rs  melt.rs  mod.rs  scanners.rs
crates/implant-win/src/trex/exfil/: deaddrop.rs  mod.rs
crates/minidump-assembler/: Cargo.toml
crates/minidump-assembler/src/: lib.rs
crates/nyx-loader/: Cargo.toml
crates/nyx-loader/examples/: wrap.rs
crates/nyx-loader/pic-loader/: Cargo.toml
crates/nyx-loader/pic-loader/src/: lib.rs
crates/nyx-loader/src/: dll_probe.rs  lib.rs  on_target.rs  peb_walk.rs  stub.rs
crates/nyx-loader/tests/: payload_format.rs  roundtrip_decrypt.rs  stub_layout.rs
crates/nyx-mutate/: Cargo.toml
crates/nyx-mutate/src/: lib.rs
crates/offset-resolver/: Cargo.toml
crates/offset-resolver/src/: main.rs
crates/operator-kernel-cli/: Cargo.toml
crates/operator-kernel-cli/src/: main.rs
crates/operator-kernelsdk/: Cargo.toml
crates/operator-kernelsdk/examples/: bootstrap_test.rs  callback_neutralize_test.rs  callback_owner_map.rs  callback_probe_readonly.rs  callback_repurpose_test.rs  callback_struct_deep.rs  etw_ti_blind_test.rs  proc_hide_test.rs
crates/operator-kernelsdk/src/: byovd.rs  cfg.rs  etw_deception.rs  etwti.rs  lib.rs  netsec.rs  offsets.rs  pagewalk.rs  pattern_scan.rs  persistence.rs  telemetry.rs
crates/operator-kernelsdk/src/byovd_drivers/: iqvw64e.rs  mod.rs  rtc64.rs  shield.rs  wdtkernel.rs
crates/operator-kernelsdk/src/win/: driver_load.rs  kernel_base.rs  ksld.rs  mod.rs  pagewalk.rs  pattern_scan.rs  resolve.rs  va_rw.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
crates/profile/: Cargo.toml
crates/profile/src/: ast.rs  envelope.rs  lexer.rs  lib.rs  lint.rs  parser.rs  transform.rs
crates/profile/tests/: lint.rs  parse.rs  transform.rs
crates/protocol/: Cargo.toml
crates/protocol/fuzz/: .gitignore  Cargo.toml  README.md
crates/protocol/fuzz/corpus/decode_vec/: seed_batch_3_tasks  seed_raw_overlong_blob_prefix  seed_single_ping  seed_single_response  seed_single_shell
crates/protocol/fuzz/fuzz_targets/: decode_vec.rs
crates/protocol/src/: crypto.rs  frame.rs  lib.rs  msg.rs  wire.rs
crates/protocol/tests/: roundtrip.rs
crates/rest/: Cargo.toml
crates/rest/src/: lib.rs
crates/scripting/: Cargo.toml
crates/scripting-rhai/: Cargo.toml
crates/scripting-rhai/src/: lib.rs
crates/scripting/src/: builtins.rs  bus.rs  event.rs  hook.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  extc2_relay.rs  implant_gen.rs  kernel.rs  lib.rs  main.rs  operators.rs  tls.rs
crates/server/tests/: beacon_limits.rs  end_to_end.rs
crates/store/: Cargo.toml
crates/store/src/: implant_store.rs  lib.rs  model.rs  session_store.rs  store.rs
crates/transport/: Cargo.toml
crates/transport/src/: doh_dns.rs  fingerprint.rs  h2.rs  lib.rs  llm_api.rs  malleable.rs  mcp.rs  slack_api.rs  smb_pipe.rs  stack.rs  tls.rs  traits.rs
crates/transport/tests/: fingerprint.rs
scripts/: EnableDebug.cs  capture_screens.py  deploy_detectors.ps1  dev_test.sh  e2e_probe.sh  keyfile_check.sh  loader_probe.ps1  pesieve_scan.ps1  pesieve_scan_v2.ps1  remote_tests.py  run_all_selftests.ps1  scan_clean.ps1  scan_linger.ps1  scan_multi.ps1  scan_with_debug.ps1  setup_release_env.ps1  ssh_connect.py  ui_test.py  verify_implant_pub.sh  win_build.sh  win_deploy.sh  win_remote_run.sh  win_selftest_all.ps1
scripts/release/: build_cli.ps1  build_offset_resolver.ps1  build_prod_dll.ps1  build_selftest_dll.ps1  build_server.ps1  extract_notes.ps1  loader_probe_gate.ps1  selftest_gate.ps1  stage_assets.ps1  verify_env.ps1  wrap_blob.ps1
tools/loader_probe_dll/: Cargo.toml
tools/loader_probe_dll/src/: lib.rs
tools/srdi/: Cargo.toml
tools/srdi/src/: main.rs
(+7 files in other folders)
