[package]
name = "nyx-agent-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nyx std-based dev/POSIX implant — proves the protocol loop on the dev host (not the Windows PIC agent)"

[dependencies]
nyx-protocol = { workspace = true }
nyx-profile = { workspace = true }
nyx-bof-runner = { workspace = true }
ureq = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nyx-agent-dev"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
