[package]
name = "nyx-config-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compile-time, per-build randomized implant-config embedding (proc-macro)"

[lib]
proc-macro = true

[dependencies]
# NOTE: deliberately does NOT depend on nyx-config (avoids a dev-dep cycle:
# nyx-config -> nyx-config-macros [dev] -> nyx-config). The macro encrypts with
# its own AEAD call and emits a call to `nyx_config::decrypt`, resolved in the
# downstream crate.
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
# chacha20poly1305's `encrypt` (Aead trait) needs the `alloc` feature; rand's
# thread_rng needs `std`. This is a proc-macro crate (always std/host), so both
# are on unconditionally — workspace deps have default-features off (for the
# no_std protocol), so we re-enable what we need here.
chacha20poly1305 = { workspace = true, features = ["alloc"] }
rand = { workspace = true, features = ["std", "std_rng", "getrandom"] }
