[package]
name = "nyx-mutate"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Binary mutation engine for per-implant uniqueness — NOP insertion, instruction substitution, register rotation, key randomization"

[dependencies]
rand = { workspace = true, features = ["getrandom", "std_rng"] }
