[package]
name = "nyx-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent credential store for the Nyx team server (SQLite/ACID)."

[dependencies]
hex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
