[package]
name = "nyx-client-ui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nyx operator GUI — Tauri 2 + React + Three.js. Replaces the legacy Makepad client-ui and ratatui client-cli."

[lib]
name = "nyx_client_ui_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nyx-rest = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
